<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/section_main"
            android:checked="true"
            android:id="@+id/nav_main"
            android:icon="@drawable/home"
            android:name="@string/section_main"/>
    </group>

    <group android:id="@+id/other" android:checkableBehavior="single">
        <item
            android:title="@string/section_settings"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:name="@string/section_settings"/>
        <item
            android:title="@string/section_about"
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:name="@string/section_about"/>
    </group>
</menu>
